refactor reaction feature for paging